# django-starter-template

./: .editorconfig  .env.public  .env.sample  CHANGELOG.md  README.md  dj.bat  justfile  manage.py  pyproject.toml  settings.ini
apps/core/: admin.py  apps.py  models.py
config/: api.py  asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py
myproject/: api.py  settings.py  urls.py
