[project]
name = "django-starter-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "django-ninja>=1.5.3",
    "mysqlclient>=2.2.8",
    "psycopg>=3.3.3",
    "uvicorn>=0.41.0",
    "gunicorn>=25.1.0 ; sys_platform == 'linux'",
    "uvicorn-worker>=0.4.0 ; sys_platform == 'linux'",
]
